--- a/test1.ipynb
+++ b/test1.ipynb
@@ -10,6 +10,7 @@
     "from google.colab import drive\n",
     "drive.mount('/content/drive')\n",
     "%cd /content/drive/MyDrive/Github/Taskmaster\n",
+    "!pip install tensorflow --upgrade\n",
     "import tensorflow as tf\n",
     "print(tf.__version__)\n",
     "print(tf.config.list_physical_devices('GPU'))"
@@ -41,11 +42,12 @@
     "\n",
     "task = rubiks.rubiks_task\n",
     "setup = rubiks.rubiks_setup\n",
+    "rng = np.random.default_rng(seed=0)\n",
     "\n",
-    "#my_student_network = student_network.load(\"models/trained_model.h5\")\n",
-    "my_student_network = student_network.create(residual_layers = 4)\n",
+    "my_student_network = student_network.load(\"models/trained.h5\")\n",
+    "#my_student_network = student_network.create(residual_layers = 4)\n",
     "student_template = student(task, 50,my_student_network)\n",
-    "t = teacher(setup, 3)\n",
+    "t = teacher(setup, lambda n : 1+rng.poisson(lam=3,size=n))\n",
     "c = classroom(task, setup, t, student_template, n_students=1, max_steps=10)\n",
     "#c.run_training_batch(n_problems=1,epochs_per_episode=3)\n"
    ]
@@ -59,152 +61,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 47 out of 100 remain open.\n",
-      "Finished step 2, 47 out of 100 remain open.\n",
-      "Finished step 3, 26 out of 100 remain open.\n",
-      "Finished step 4, 26 out of 100 remain open.\n",
-      "Finished step 5, 26 out of 100 remain open.\n",
-      "Finished step 6, 26 out of 100 remain open.\n",
-      "Finished step 7, 26 out of 100 remain open.\n",
+      "  OB    \n",
+      "  YB    \n",
+      "WOGOYYRB\n",
+      "WOGYRRWB\n",
+      "  WG    \n",
+      "  RG    \n",
+      "\n",
+      "  OO    \n",
+      "  OO    \n",
+      "WWGGYYBB\n",
+      "WWGGYYBB\n",
+      "  RR    \n",
+      "  RR    \n",
+      "\n",
+      "  OB    \n",
+      "  YB    \n",
+      "WOGOYYRB\n",
+      "WOGYRRWB\n",
+      "  WG    \n",
+      "  RG    \n",
+      "\n",
+      "  OO    \n",
+      "  YY    \n",
+      "WOGGRYBB\n",
+      "WOGGRYBB\n",
+      "  WW    \n",
+      "  RR    \n",
+      "\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 1 out of 1 remain open.\n",
+      "Finished step 2, 0 out of 1 remain open.\n",
+      "Finished step 3, 0 out of 1 remain open.\n",
+      "Finished step 4, 0 out of 1 remain open.\n",
+      "Finished step 5, 0 out of 1 remain open.\n",
+      "Finished step 6, 0 out of 1 remain open.\n",
+      "Finished step 7, 0 out of 1 remain open.\n",
+      "Finished step 8, 0 out of 1 remain open.\n",
+      "Finished step 9, 0 out of 1 remain open.\n",
       "Epoch 1/3\n",
-      "21/21 [==============================] - 0s 3ms/step - loss: 0.8213 - eval_output_loss: 0.0789 - policy_output_loss: 0.0677\n",
+      "1/1 [==============================] - 0s 14ms/step - loss: 1.5438 - eval_output_loss: 0.4924 - policy_output_loss: 0.0347\n",
       "Epoch 2/3\n",
-      "21/21 [==============================] - 0s 3ms/step - loss: 0.5968 - eval_output_loss: 0.0167 - policy_output_loss: 0.0387\n",
+      "1/1 [==============================] - 0s 11ms/step - loss: 1.2962 - eval_output_loss: 0.4100 - policy_output_loss: 0.0344\n",
       "Epoch 3/3\n",
-      "21/21 [==============================] - 0s 3ms/step - loss: 0.5594 - eval_output_loss: 0.0127 - policy_output_loss: 0.0238\n",
-      "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 12 out of 100 remain open.\n",
-      "Finished step 2, 12 out of 100 remain open.\n",
-      "Finished step 3, 0 out of 100 remain open.\n",
-      "Finished step 4, 0 out of 100 remain open.\n",
-      "Finished step 5, 0 out of 100 remain open.\n",
-      "Finished step 6, 0 out of 100 remain open.\n",
-      "Finished step 7, 0 out of 100 remain open.\n",
+      "1/1 [==============================] - 0s 9ms/step - loss: 1.0441 - eval_output_loss: 0.3260 - policy_output_loss: 0.0342\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 1 out of 1 remain open.\n",
+      "Finished step 2, 1 out of 1 remain open.\n",
+      "Finished step 3, 1 out of 1 remain open.\n",
+      "Finished step 4, 1 out of 1 remain open.\n",
+      "Finished step 5, 1 out of 1 remain open.\n",
+      "Finished step 6, 1 out of 1 remain open.\n",
+      "Finished step 7, 1 out of 1 remain open.\n",
+      "Finished step 8, 1 out of 1 remain open.\n",
+      "Finished step 9, 1 out of 1 remain open.\n",
       "Epoch 1/3\n",
-      "8/8 [==============================] - 0s 4ms/step - loss: 1.4723 - eval_output_loss: 0.3160 - policy_output_loss: 0.0343\n",
+      "1/1 [==============================] - 3s 3s/step - loss: 0.1439 - eval_output_loss: 0.0300 - policy_output_loss: 0.0216\n",
       "Epoch 2/3\n",
-      "8/8 [==============================] - 0s 4ms/step - loss: 1.3862 - eval_output_loss: 0.2914 - policy_output_loss: 0.0251\n",
+      "1/1 [==============================] - 0s 11ms/step - loss: 0.1054 - eval_output_loss: 0.0172 - policy_output_loss: 0.0208\n",
       "Epoch 3/3\n",
-      "8/8 [==============================] - 0s 4ms/step - loss: 1.3580 - eval_output_loss: 0.2839 - policy_output_loss: 0.0222\n",
-      "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 52 out of 100 remain open.\n",
-      "Finished step 2, 52 out of 100 remain open.\n",
-      "Finished step 3, 34 out of 100 remain open.\n",
-      "Finished step 4, 34 out of 100 remain open.\n",
-      "Finished step 5, 34 out of 100 remain open.\n",
-      "Finished step 6, 34 out of 100 remain open.\n",
-      "Finished step 7, 34 out of 100 remain open.\n",
+      "1/1 [==============================] - 0s 12ms/step - loss: 0.0781 - eval_output_loss: 0.0084 - policy_output_loss: 0.0194\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 1 out of 1 remain open.\n",
+      "Finished step 2, 1 out of 1 remain open.\n",
+      "Finished step 3, 1 out of 1 remain open.\n",
+      "Finished step 4, 1 out of 1 remain open.\n",
+      "Finished step 5, 1 out of 1 remain open.\n",
+      "Finished step 6, 1 out of 1 remain open.\n",
+      "Finished step 7, 1 out of 1 remain open.\n",
+      "Finished step 8, 1 out of 1 remain open.\n",
+      "Finished step 9, 1 out of 1 remain open.\n",
       "Epoch 1/3\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.3259 - eval_output_loss: 0.2712 - policy_output_loss: 0.0332\n",
+      "1/1 [==============================] - 0s 13ms/step - loss: 0.0763 - eval_output_loss: 0.0028 - policy_output_loss: 0.0335\n",
       "Epoch 2/3\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 0.6095 - eval_output_loss: 0.0374 - policy_output_loss: 0.0248\n",
+      "1/1 [==============================] - 0s 11ms/step - loss: 0.0753 - eval_output_loss: 0.0026 - policy_output_loss: 0.0322\n",
       "Epoch 3/3\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 0.5007 - eval_output_loss: 0.0068 - policy_output_loss: 0.0158\n",
-      "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 33 out of 100 remain open.\n",
-      "Finished step 2, 33 out of 100 remain open.\n",
-      "Finished step 3, 25 out of 100 remain open.\n",
-      "Finished step 4, 25 out of 100 remain open.\n",
-      "Finished step 5, 25 out of 100 remain open.\n",
-      "Finished step 6, 25 out of 100 remain open.\n",
-      "Finished step 7, 25 out of 100 remain open.\n",
-      "Epoch 1/3\n",
-      "19/19 [==============================] - 0s 3ms/step - loss: 0.8141 - eval_output_loss: 0.1054 - policy_output_loss: 0.0419\n",
-      "Epoch 2/3\n",
-      "19/19 [==============================] - 0s 3ms/step - loss: 0.5983 - eval_output_loss: 0.0409 - policy_output_loss: 0.0233\n",
-      "Epoch 3/3\n",
-      "19/19 [==============================] - 0s 4ms/step - loss: 0.4996 - eval_output_loss: 0.0114 - policy_output_loss: 0.0159\n",
-      "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 34 out of 100 remain open.\n",
-      "Finished step 2, 34 out of 100 remain open.\n",
-      "Finished step 3, 16 out of 100 remain open.\n",
-      "Finished step 4, 16 out of 100 remain open.\n",
-      "Finished step 5, 16 out of 100 remain open.\n",
-      "Finished step 6, 16 out of 100 remain open.\n",
-      "Finished step 7, 16 out of 100 remain open.\n",
-      "Epoch 1/3\n",
-      "16/16 [==============================] - 0s 3ms/step - loss: 1.0166 - eval_output_loss: 0.1748 - policy_output_loss: 0.0466\n",
-      "Epoch 2/3\n",
-      "16/16 [==============================] - 0s 3ms/step - loss: 0.8066 - eval_output_loss: 0.1115 - policy_output_loss: 0.0284\n",
-      "Epoch 3/3\n",
-      "16/16 [==============================] - 0s 3ms/step - loss: 0.6666 - eval_output_loss: 0.0690 - policy_output_loss: 0.0200\n",
-      "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 45 out of 100 remain open.\n",
-      "Finished step 2, 45 out of 100 remain open.\n",
-      "Finished step 3, 26 out of 100 remain open.\n",
-      "Finished step 4, 26 out of 100 remain open.\n",
-      "Finished step 5, 26 out of 100 remain open.\n",
-      "Finished step 6, 26 out of 100 remain open.\n",
-      "Finished step 7, 26 out of 100 remain open.\n",
-      "Epoch 1/3\n",
-      "20/20 [==============================] - 0s 4ms/step - loss: 0.7773 - eval_output_loss: 0.1033 - policy_output_loss: 0.0333\n",
-      "Epoch 2/3\n",
-      "20/20 [==============================] - 0s 3ms/step - loss: 0.5449 - eval_output_loss: 0.0328 - policy_output_loss: 0.0179\n",
-      "Epoch 3/3\n",
-      "20/20 [==============================] - 0s 3ms/step - loss: 0.5155 - eval_output_loss: 0.0272 - policy_output_loss: 0.0121\n",
-      "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 26 out of 100 remain open.\n",
-      "Finished step 2, 26 out of 100 remain open.\n",
-      "Finished step 3, 10 out of 100 remain open.\n",
-      "Finished step 4, 10 out of 100 remain open.\n",
-      "Finished step 5, 10 out of 100 remain open.\n",
-      "Finished step 6, 10 out of 100 remain open.\n",
-      "Finished step 7, 10 out of 100 remain open.\n",
-      "Epoch 1/3\n",
-      "13/13 [==============================] - 0s 3ms/step - loss: 0.8927 - eval_output_loss: 0.1443 - policy_output_loss: 0.0434\n",
-      "Epoch 2/3\n",
-      "13/13 [==============================] - 0s 3ms/step - loss: 0.7079 - eval_output_loss: 0.0922 - policy_output_loss: 0.0177\n",
-      "Epoch 3/3\n",
-      "13/13 [==============================] - 0s 3ms/step - loss: 0.5222 - eval_output_loss: 0.0322 - policy_output_loss: 0.0155\n",
-      "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 45 out of 100 remain open.\n",
-      "Finished step 2, 45 out of 100 remain open.\n",
-      "Finished step 3, 31 out of 100 remain open.\n",
-      "Finished step 4, 31 out of 100 remain open.\n",
-      "Finished step 5, 31 out of 100 remain open.\n",
-      "Finished step 6, 31 out of 100 remain open.\n",
-      "Finished step 7, 31 out of 100 remain open.\n",
-      "Epoch 1/3\n",
-      "22/22 [==============================] - 0s 3ms/step - loss: 0.6957 - eval_output_loss: 0.0845 - policy_output_loss: 0.0371\n",
-      "Epoch 2/3\n",
-      "22/22 [==============================] - 0s 3ms/step - loss: 0.5102 - eval_output_loss: 0.0310 - policy_output_loss: 0.0179\n",
-      "Epoch 3/3\n",
-      "22/22 [==============================] - 0s 3ms/step - loss: 0.4487 - eval_output_loss: 0.0149 - policy_output_loss: 0.0124\n",
-      "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 14 out of 100 remain open.\n",
-      "Finished step 2, 14 out of 100 remain open.\n",
-      "Finished step 3, 0 out of 100 remain open.\n",
-      "Finished step 4, 0 out of 100 remain open.\n",
-      "Finished step 5, 0 out of 100 remain open.\n",
-      "Finished step 6, 0 out of 100 remain open.\n",
-      "Finished step 7, 0 out of 100 remain open.\n",
-      "Epoch 1/3\n",
-      "8/8 [==============================] - 0s 3ms/step - loss: 1.2526 - eval_output_loss: 0.2735 - policy_output_loss: 0.0458\n",
-      "Epoch 2/3\n",
-      "8/8 [==============================] - 0s 4ms/step - loss: 1.0896 - eval_output_loss: 0.2270 - policy_output_loss: 0.0239\n",
-      "Epoch 3/3\n",
-      "8/8 [==============================] - 0s 3ms/step - loss: 1.0692 - eval_output_loss: 0.2224 - policy_output_loss: 0.0179\n",
-      "Finished step 0, 100 out of 100 remain open.\n",
-      "Finished step 1, 15 out of 100 remain open.\n",
-      "Finished step 2, 15 out of 100 remain open.\n",
-      "Finished step 3, 0 out of 100 remain open.\n",
-      "Finished step 4, 0 out of 100 remain open.\n",
-      "Finished step 5, 0 out of 100 remain open.\n",
-      "Finished step 6, 0 out of 100 remain open.\n",
-      "Finished step 7, 0 out of 100 remain open.\n",
-      "Epoch 1/3\n",
-      "9/9 [==============================] - 0s 3ms/step - loss: 0.9930 - eval_output_loss: 0.1959 - policy_output_loss: 0.0226\n",
-      "Epoch 2/3\n",
-      "9/9 [==============================] - 0s 4ms/step - loss: 0.9550 - eval_output_loss: 0.1861 - policy_output_loss: 0.0159\n",
-      "Epoch 3/3\n",
-      "9/9 [==============================] - 0s 3ms/step - loss: 0.6441 - eval_output_loss: 0.0840 - policy_output_loss: 0.0131\n"
+      "1/1 [==============================] - 0s 9ms/step - loss: 0.0735 - eval_output_loss: 0.0025 - policy_output_loss: 0.0300\n",
+      "Finished step 0, 1 out of 1 remain open.\n",
+      "Finished step 1, 1 out of 1 remain open.\n",
+      "Finished step 2, 1 out of 1 remain open.\n",
+      "Finished step 3, 1 out of 1 remain open.\n",
+      "Finished step 4, 1 out of 1 remain open.\n",
+      "Finished step 5, 1 out of 1 remain open.\n",
+      "Finished step 6, 1 out of 1 remain open.\n",
+      "Finished step 7, 1 out of 1 remain open.\n"
      ]
     }
    ],
    "source": [
     "for i in range(10):\n",
-    "    c.run_training_batch(n_problems=100,epochs_per_episode=3)\n",
+    "    c.run_training_batch(n_problems=1,epochs_per_episode=3)\n",
     "    #if i % 10 == 0:\n",
     "    #    my_student_network.save(\"models/t.keras\")"
    ]
